<resources>
    <string name="app_name">SmackChat</string>
    <string name="text_user_name">用户名:</string>
    <string name="text_input_user_name">请输入用户名</string>
    <string name="text_password">密码:</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_login">登录</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="text_sky_chat">云信</string>
    <string name="text_sky_connect">联系人</string>
    <string name="text_sky_find">发现</string>
    <string name="text_sky_myself">我</string>

    <string name="chat_send">发送</string>


    <string name="action_state_nomal">按住 说话</string>
    <string name="action_recorderint">松开 结束</string>
    <string name="action_cancel">松开 取消</string>

    <string name="jid_str">云信号：%1$</string>

</resources>
