<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ly_14"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="right"
            android:text="@string/text_user_name"
            android:textColor="@color/color_1e1e1e"/>

        <EditText
            android:id="@+id/userNameEd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/ly_14"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/text_input_user_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/color_40000000"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ly_14"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="right"
            android:text="@string/text_password"
            android:textColor="@color/color_1e1e1e"/>

        <EditText
            android:id="@+id/passwordEd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/ly_14"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/text_input_password"
            android:inputType="textPassword"
            android:textColorHint="@color/color_40000000"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ly_14"
        android:text="@string/text_login"/>


</LinearLayout>